# tiny-gp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tiny_gp.c  tiny_gp.h  tiny_gp.py  tiny_gp_1.ipynb  tiny_gp_2.ipynb  tiny_gp_cli.c  tiny_gp_cli.py
